--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -80,14 +80,26 @@
         overflow: hidden;
         background-color: #121212;
         color: white;
-
+        padding-top: 150px;
 
         &.show-all {
             height: 100%;
         }
         
         .container {
-            overflow: hidden;
+            position: relative;
+
+            .bg-word-review {
+                font-size: 160px;
+                font-family: 'Montserrat ExtraBold';
+                opacity: 0.05;
+                font-weight: bold;
+                position: absolute;
+                right: 50%;
+                top: -100px;
+                transform: translateX(calc(50% + 215px));
+                z-index: 1;
+            }
 
             .first-review,
             .second-review,
@@ -100,7 +112,8 @@
                 .video-or-img {
                     justify-self: end;
                     transition: transform .3s;
-                        
+                    z-index: 999;
+
                         .show-testimonials {
                             width: 220px;
                             height: 45px;
@@ -128,6 +141,7 @@
                             width: 100%;
                             height: 578px;
                             transition: transform .4s;
+                            
                         }
                 }
                 .feedback-text {
@@ -199,7 +213,7 @@
             margin-right: 7%;
 
             h1 {
-                font-family: 'Montserrat Medium';
+                font-family: 'Montserrat SemiBold';
                 font-size: 40px;
                 font-weight: bold;
             }
@@ -240,7 +254,96 @@
             }
         }
     }
+    .section-vacancies {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #2159f4;
+        color: white;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 30px;
+        padding-right: 30px;
 
+        .vacancies {
+            margin-right: 6%;
+
+            .vacancy-card {
+                max-width: 720px;
+                min-width: 200px;
+                background: $lightblue;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                padding-left: 32px;
+                padding-right: 32px;
+                border-radius: 8px;
+                box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+                
+                &:not(:last-of-type) {
+                    margin-bottom: 16px;
+                }
+
+                .location {
+                    img {
+                        margin-right: 12px;
+                    }
+                    span {
+                        font-size: 13px;
+                    }
+                }
+
+                p {
+                    font-size: 20px;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    line-height: 1.3;
+                }
+
+                small {
+                    font-size: 15px;
+                    opacity: 0.4;
+                }
+            }
+        }
+        .vacancies-text {
+            width: 530px;
+
+            h1 {
+                font-size: 48px;
+                font-family: 'Montserrat Medium';
+                font-weight: bold;
+                
+            }
+            p {
+                font-size: 20px;
+                font-family: 'Montserrat Medium';
+                line-height: 1.6;
+                margin-top: 40px;
+                margin-bottom: 40px;
+            }
+            span {
+                width: 240px;
+                height: 40px;
+                font-size: 18px;
+                border-radius: 22.5px;
+                border: solid 2px #ffffff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 10px;
+                    height: 10px;
+                    border-radius: 50%;
+                    padding: 3px;
+                    border: 1px solid white;
+                    margin-left: 10px;
+                    transform: rotate(-90deg);
+
+                }
+            }
+        }
+    }
 }
 
 .none {
@@ -330,12 +433,24 @@
         }
     }
 }
+@media only screen and (max-width: 1100px) {
+    .neural {
+        .reviews-section {
+            .container {
+                .bg-word-review {
+                    display: none;
+                }
+            }
+        }
+    }
+}
 @media only screen and (max-width: 900px) {
     .neural { 
         .reviews-section {
             height: 800px;
 
             .container {
+            
                 .first-review,
                 .second-review,
                 .third-review {
@@ -389,8 +504,6 @@
 
 @media only screen and (max-width: 768px) {
     .neural {
-        margin-bottom: 100px;
-
         .networks {
             .networks-container {
                 margin-top: 135px;
@@ -400,6 +513,15 @@
         .skills {
             .cards {
                 flex-wrap: wrap;
+            }
+        }
+
+        .section-vacancies {
+            flex-wrap: wrap;
+       
+            .vacancies {
+                margin: 0;
+                margin-bottom: 60px;
             }
         }
     }
