--- a/docs/style.css
+++ b/docs/style.css
@@ -30,7 +30,8 @@
   font-family: 'Proxima Nova';
   padding: 0;
   margin: 0;
-  font-weight: normal; }
+  font-weight: normal;
+  list-style: none; }
 
 *::selection {
   background: #2979ff;
@@ -135,7 +136,8 @@
     .white-page div a span {
       display: flex;
       margin-left: 55px;
-      position: relative; }
+      position: relative;
+      line-height: 1; }
       .white-page div a span::before {
         content: url(8ba4f7d2b21d8e5774312b66f35069fc.svg);
         position: absolute;
@@ -173,6 +175,113 @@
       margin: 0; }
     .header-container button {
       display: none; } }
+
+footer {
+  position: relative;
+  padding-left: 30px;
+  padding-right: 30px; }
+  footer::after {
+    content: '';
+    width: 200vh;
+    height: 1px;
+    background-color: #f5f5f5;
+    position: absolute;
+    bottom: 50px; }
+  footer .container {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px; }
+    footer .container div h2 {
+      margin-bottom: 35px;
+      font-size: 18px;
+      font-family: 'Montserrat ExtraBold'; }
+    footer .container .logo-container {
+      display: flex;
+      flex-direction: column;
+      height: 288px;
+      justify-content: space-between;
+      margin-bottom: 20px; }
+      footer .container .logo-container .footer-logo {
+        height: 30px;
+        width: 140px;
+        transform: translateY(-6px);
+        margin-right: 160px; }
+      footer .container .logo-container span {
+        color: #9e9e9e;
+        font-size: 14px; }
+    footer .container .odessa {
+      margin-right: 7%; }
+      footer .container .odessa h2 {
+        position: relative; }
+        footer .container .odessa h2::before {
+          content: 'Ukrain';
+          font-size: 15px;
+          color: #9e9e9e;
+          font-family: 'Proxima Nova';
+          position: absolute;
+          top: 22px; }
+      footer .container .odessa .address {
+        font-size: 15px;
+        line-height: 1.7;
+        color: #424242;
+        margin-bottom: 15px; }
+      footer .container .odessa .social-network img + img {
+        margin-left: 25px; }
+    footer .container .dublin {
+      margin-right: 9%; }
+      footer .container .dublin h2 {
+        position: relative; }
+        footer .container .dublin h2::before {
+          content: 'Ireland';
+          font-size: 15px;
+          color: #9e9e9e;
+          font-family: 'Proxima Nova';
+          position: absolute;
+          top: 22px; }
+      footer .container .dublin .address {
+        font-size: 15px;
+        line-height: 1.7;
+        color: #424242;
+        margin-bottom: 15px; }
+    footer .container .expertise {
+      margin-right: 7%; }
+      footer .container .expertise-list {
+        color: #424242; }
+        footer .container .expertise-list li + li {
+          margin-top: 16px; }
+    footer .container .company {
+      color: #424242; }
+      footer .container .company-list li + li {
+        margin-top: 16px; }
+
+@media only screen and (max-width: 1160px) {
+  footer {
+    margin-bottom: 70px; }
+    footer::after {
+      width: 0px; }
+    footer .container .logo-container {
+      display: none; } }
+
+@media only screen and (max-width: 768px) {
+  footer .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 60px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-35%); } }
+
+@media only screen and (max-width: 500px) {
+  footer .container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 50%;
+    transform: translateX(-22%); }
+    footer .container div {
+      margin-right: 0px !important; }
+      footer .container div:not(:first-child) + div {
+        margin-top: 40px; } }
 
 .AI {
   height: calc(50vh - 60px);
@@ -361,7 +470,7 @@
           margin: 50px 0 0px 0; } }
 
 .works {
-  height: 100vh;
+  height: calc(100vh - 40px);
   overflow: hidden;
   display: flex; }
   .works .works-container {
@@ -386,7 +495,7 @@
         overflow: hidden;
         transform: translateX(-50%); }
       .works .works-container .content video {
-        width: 1200px;
+        width: 1000px;
         margin-top: 13px;
         margin-bottom: -5px; }
     .works .works-container .text-about-work {
@@ -773,7 +882,6 @@
       margin-right: 6%; }
       .neural .section-vacancies .vacancies .vacancy-card {
         max-width: 720px;
-        min-width: 200px;
         background: #2979ff;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -783,10 +891,14 @@
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12); }
         .neural .section-vacancies .vacancies .vacancy-card:not(:last-of-type) {
           margin-bottom: 16px; }
-        .neural .section-vacancies .vacancies .vacancy-card .location img {
-          margin-right: 12px; }
-        .neural .section-vacancies .vacancies .vacancy-card .location span {
-          font-size: 13px; }
+        .neural .section-vacancies .vacancies .vacancy-card .location {
+          display: flex;
+          align-items: flex-end; }
+          .neural .section-vacancies .vacancies .vacancy-card .location img {
+            width: 16px;
+            margin-right: 12px; }
+          .neural .section-vacancies .vacancies .vacancy-card .location span {
+            font-size: 13px; }
         .neural .section-vacancies .vacancies .vacancy-card p {
           font-size: 20px;
           margin-top: 15px;
