--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -1,5 +1,5 @@
 .works {
-    height: 100vh;
+    height: calc(100vh - 40px);
     overflow: hidden;
     display: flex;
 
@@ -18,8 +18,8 @@
             box-shadow: 0px 0px 66px -25px #071331;
             overflow: hidden;
 
-            &::before{
-                content: url(../../assets/video-header-svg.svg);
+            &::before {
+                content: url(../../assets/img/video-header-svg.svg);
                 width: 101%;
                 position: absolute;
                 top: 0;
@@ -28,7 +28,7 @@
                 transform: translateX(-50%);
             }
             video {
-                width: 1200px;
+                width: 1000px;
                 margin-top: 13px;
                 margin-bottom: -5px;
             }
@@ -134,7 +134,7 @@
             .content {
                 
                 &::before {
-                    content: url(../../assets/video-header-svg.svg);
+                    content: url(../../assets/img/video-header-svg.svg);
                     width: 101%;
                 }
                 video {
