add experties page

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -3,6 +3,10 @@
 	src:  url('../../assets/fonts/ProximaNova-Regular.otf')
 }
 @font-face {
+	font-family: 'ProximaNova-Extrabold';
+	src:  url('../../assets/fonts/ProximaNova-Extrabold.otf')
+}
+@font-face {
 	font-family: 'Montserrat';
 	src:  url('../../assets/fonts/Montserrat-Regular.ttf')
 }
