--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,6 +2,8 @@ footer {
     position: relative;
     padding-left: 30px;
     padding-right: 30px;
+    display: flex;
+    justify-content: center;
 
     &::after {
         content: '';
@@ -10,11 +12,13 @@ footer {
         background-color: #f5f5f5;
         position: absolute;
         bottom: 50px;
+        left: -100px;
     }
 
     .container {
+        width: 1360px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         margin-top: 40px;
         
         div {
@@ -47,7 +51,6 @@ footer {
         }
 
         .odessa {
-            margin-right: 7%;
 
             h2 {
                 position: relative;
@@ -76,7 +79,6 @@ footer {
             }
         }
         .dublin {
-            margin-right: 9%;
 
             h2 {
                 position: relative;
@@ -98,7 +100,6 @@ footer {
             }
         }
         .expertise {
-            margin-right: 7%;
 
             &-list {
                 color: #424242;
