--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -6,6 +6,7 @@
     transform: translateY(100px);
     position: relative;
     pointer-events: none;
+    padding-left: 50px;
 
    &-container{
        width: 1360px;
@@ -14,7 +15,7 @@
             width:0px;
             height:0px;
             display:block;
-            transform:scale(4,4) translate(-13px, 13px) ;
+            transform:scale(4,4) translate(-13px, 10px) ;
         }
 
         .firstCircle,
@@ -76,7 +77,7 @@
 }
 @media only screen and (max-width: 1550px){
     .AI{
-        padding-left: 100px;
+        // padding-left: 50px;
     }
 }
 @media only screen and (max-width: 855px){
@@ -100,33 +101,9 @@
         height: 50vh;
         &-container {
             p {
+                width: 100%;
                 font-size: 65px;
             }
         }
     }
 }
-
-// @media only screen and (max-width: 425px){
-//     .AI{
-//         .pulsatingCircle{
-//             display: none;
-//         }
-//         p{
-//             font-size: 75px;
-//         }
-//     }
-// }
-// @media only screen and (max-width: 375px){
-//     .AI{
-//         p{
-//             font-size: 65px;
-//         }
-//     }
-// }
-// @media only screen and (max-width: 320px){
-//     .AI{
-//         p{
-//             font-size: 55px;
-//         }
-//     }
-// }
