--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  padding-top: 20px;
   padding-right: 25px;
   padding-left: 25px;
   &-container{
@@ -22,9 +22,19 @@
         text-decoration: none;
         color: white;
         margin-right: 54px;
-        span {
+        
+        .logo {
+          font-family: 'ProximaNova-Extrabold';
           font-size: 32px;
           font-weight: bold;
+          position: relative;
+
+          &::before {
+            content: url('../../assets/img/borvo-logo-white.svg');
+            position: absolute;
+            left: -40px;
+            top: 0px;
+          }
         }
       }
       nav {
@@ -40,7 +50,8 @@
               margin-left: 48px;
             }
             a {
-              @include resetStyleLink();
+              color: white;
+              text-decoration: none;
             }
           }
         }
@@ -95,33 +106,31 @@
       outline: none;
     }
   }
+  .line {
+    width: 10000px;
+    height: 1px;
+    opacity: 0.08;
+    background-color: #f5f5f5;
+    position: absolute;
+    top: 75px;
+  }
 }
 .white-page {
-  padding: 0;
   position: relative;
-
-  &::before {
-    content: '';
-    width: 200vh;
-    height: 0.8px;
-    background: rgba(0, 0, 0, 0.1);
-    position: absolute;
-    bottom: -20px;
-  }
 
   div {
 
     a {
       color: black;
 
-      span {
+      .logo {
         display: flex;
         margin-left: 55px;
         position: relative;
         line-height: 1;
 
         &::before {
-          content: url('../../assets/img/borvo-logo.svg');
+          content: url('../../assets/img/borvo-logo-black.svg');
           position: absolute;
           left: -35px;
           top: 0px;
@@ -133,7 +142,7 @@
       ul {
         li {
           a {
-            @include resetStyleLink();
+            text-decoration: none;
             color: black;
           }
         }
@@ -159,6 +168,9 @@
   button {
     color: black;
   }
+  .line {
+    background: black;
+  }
 }
 
 @media only screen and (max-width: 1550px){
@@ -170,6 +182,26 @@
 @media only screen and (max-width: 855px){
   .header {
     padding-left: 25px;
+    .header-container {
+      div {
+        a {
+          .logo::before {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+  .white-page {
+    .header-container {
+      div {
+        a {
+          .logo::before {
+            display: inline-block;
+          }
+        }
+      }
+    }
   }
 }
 
