--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -11,68 +11,70 @@
         justify-content: center;
         background-color: #121212;
         padding-top: 120px;
-        padding-bottom: 210px;
         padding-left: 30px;
         padding-right: 30px;
 
-        .description {
-            max-width: 580px;
-            min-width: 200px;
-            margin-right: 190px;
-            color: white;
-
-            span {
-                font-size: 20px;
-            }
-
-            h1 {
-                font-family: 'Montserrat Bold';
-                font-size: 60px;
-                margin-top: 15px;
-                margin-bottom: 35px;
-            }
-
-            p {
-                width: 490px;
-                font-size: 20px;
-                color: #bdbdbd;
-                margin-bottom: 45px;
-                line-height: 1.5;
-            }
-            > button {
-                font-size: 15px;
-            }
-
-            .btn-learn-more {
-                width: 160px;
-                height: 36px;
-                border: none;
-                border-radius: 4px;
-                outline: none;
+        .container-description {
+            width: 1360px;
+            display: flex;
+            justify-content: space-between;
+            
+            .description {
                 color: white;
-                font-weight: 600;
-                background-color: $lightblue;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                
-                > img {
-                    width: 13px;
-                    height: 13px;
-                    padding: 1px;
-                    border: 1px solid white;
-                    border-radius: 50%;
-                    transform: rotate(-90deg);
-                    margin-left: 8px;
+    
+                span {
+                    font-size: 20px;
                 }
+    
+                h1 {
+                    max-width: 600px;
+                    font-family: 'Montserrat Bold';
+                    font-size: 60px;
+                    margin-top: 15px;
+                    margin-bottom: 35px;
+                }
+    
+                p {
+                    max-width: 710px;
+                    font-size: 20px;
+                    color: #bdbdbd;
+                    margin-bottom: 45px;
+                    line-height: 1.5;
+                }
+                > button {
+                    font-size: 15px;
+                }
+    
+                .btn-learn-more {
+                    width: 160px;
+                    height: 36px;
+                    border: none;
+                    border-radius: 4px;
+                    outline: none;
+                    color: white;
+                    font-weight: 600;
+                    background-color: $lightblue;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    
+                    > img {
+                        width: 13px;
+                        height: 13px;
+                        padding: 1px;
+                        border: 1px solid white;
+                        border-radius: 50%;
+                        transform: rotate(-90deg);
+                        margin-left: 8px;
+                    }
+                }
+    
             }
-
-        }
-
-        > img {
-            max-width: 681px;
-            min-width: 200px;
-            height: 680px;
+    
+            > img {
+                width: 600px;
+                height: 600px;
+            }
         }
     }
     .reviews-section {
@@ -257,7 +259,6 @@
     .section-vacancies {
         display: flex;
         justify-content: center;
-        align-items: center;
         background: #2159f4;
         color: white;
         padding-top: 50px;
@@ -265,87 +266,96 @@
         padding-left: 30px;
         padding-right: 30px;
 
-        .vacancies {
-            margin-right: 6%;
+        .container-vacancies {
+            width: 1360px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
 
-            .vacancy-card {
-                max-width: 720px;
-                background: $lightblue;
-                padding-top: 20px;
-                padding-bottom: 20px;
-                padding-left: 32px;
-                padding-right: 32px;
-                border-radius: 8px;
-                box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+            .vacancies {
+    
+                .vacancy-card {
+                    max-width: 720px;
+                    background: $lightblue;
+                    padding-top: 20px;
+                    padding-bottom: 20px;
+                    padding-left: 32px;
+                    padding-right: 32px;
+                    border-radius: 8px;
+                    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+                    
+                    &:not(:last-of-type) {
+                        margin-bottom: 16px;
+                    }
+    
+                    .location {
+                        display: flex;
+                        align-items: flex-end;
+    
+                        img {
+                            width: 16px;
+                            margin-right: 12px;
+                        }
+                        span {
+                            font-size: 13px;
+                        }
+                    }
+    
+                    p {
+                        font-size: 20px;
+                        margin-top: 15px;
+                        margin-bottom: 15px;
+                        line-height: 1.3;
+                    }
+    
+                    small {
+                        font-size: 15px;
+                        opacity: 0.4;
+                    }
+                }
+            }
+            .vacancies-text {
+                max-width: 530px;
+                padding-left: 50px;
                 
-                &:not(:last-of-type) {
-                    margin-bottom: 16px;
+                h1 {
+                    font-size: 48px;
+                    font-family: 'Montserrat Medium';
+                    font-weight: bold;
+                    
                 }
-
-                .location {
-                    display: flex;
-                    align-items: flex-end;
-
-                    img {
-                        width: 16px;
-                        margin-right: 12px;
-                    }
-                    span {
-                        font-size: 13px;
-                    }
-                }
-
                 p {
                     font-size: 20px;
-                    margin-top: 15px;
-                    margin-bottom: 15px;
-                    line-height: 1.3;
+                    font-family: 'Montserrat Medium';
+                    line-height: 1.6;
+                    margin-top: 40px;
+                    margin-bottom: 40px;
                 }
-
-                small {
-                    font-size: 15px;
-                    opacity: 0.4;
-                }
-            }
-        }
-        .vacancies-text {
-            width: 530px;
-
-            h1 {
-                font-size: 48px;
-                font-family: 'Montserrat Medium';
-                font-weight: bold;
-                
-            }
-            p {
-                font-size: 20px;
-                font-family: 'Montserrat Medium';
-                line-height: 1.6;
-                margin-top: 40px;
-                margin-bottom: 40px;
-            }
-            span {
-                width: 240px;
-                height: 40px;
-                font-size: 18px;
-                border-radius: 22.5px;
-                border: solid 2px #ffffff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    width: 10px;
-                    height: 10px;
-                    border-radius: 50%;
-                    padding: 3px;
-                    border: 1px solid white;
-                    margin-left: 10px;
-                    transform: rotate(-90deg);
-
+                span {
+                    width: 240px;
+                    height: 40px;
+                    font-size: 18px;
+                    border-radius: 22.5px;
+                    border: solid 2px #ffffff;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+    
+                    img {
+                        width: 10px;
+                        height: 10px;
+                        border-radius: 50%;
+                        padding: 3px;
+                        border: 1px solid white;
+                        margin-left: 10px;
+                        transform: rotate(-90deg);
+    
+                    }
                 }
             }
         }
+
+
     }
 }
 
@@ -401,37 +411,27 @@
         }
     }
 }
-@media only screen and (max-width: 1400px) {
-    .neural {
-        .description-borvo {
-            > img {
-               width: 100%;
-               height: 100%;
-            }
-        }
-    }
-}
 @media only screen and (max-width: 1200px) {
     .neural {
         .description-borvo {
-            flex-direction: column;
-            align-items: center;
             padding-bottom: 120px;
+            
+            .container-description {
+                align-items: center;
+                flex-direction: column;
 
-            .description {
-                margin: 0;
-                margin-bottom: 50px;
-
-                h1 {
-                    font-size: 60px;
+                .description {
+                    margin: 0;
+                    margin-bottom: 50px;
+        
+                    h1 {
+                        font-size: 60px;
+                    }
                 }
-                p {
-                    width: auto;
+        
+                > img {
+                   display: none;
                 }
-            }
-
-            > img {
-               display: none;
             }
         }
     }
@@ -520,11 +520,15 @@
         }
 
         .section-vacancies {
-            flex-wrap: wrap;
-       
-            .vacancies {
-                margin: 0;
-                margin-bottom: 60px;
+            .container-vacancies {
+                flex-wrap: wrap;
+        
+                .vacancies {
+                    margin-bottom: 60px;
+                }
+                .vacancies-text {
+                    padding: 0;
+                }
             }
         }
     }
