--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -2,7 +2,14 @@
   display: flex;
   overflow: hidden;
   height: 100vh;
-
+  .bottom-page{
+    width: 1px;
+    height: 1px;
+    background: red;
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+  }
   >.cards {
     display: flex;
     padding-left: calc(50% - 700px);
@@ -68,8 +75,13 @@
         transform-origin: 49% 58.5%;
         z-index: 5;
         svg {
-          fill: $bgColor;
           outline: 150vh solid $bgColor;
+          fill: $bgColor;
+          display: inline-block;
+        }
+        .safari-svg {
+          
+          display: none;
         }
       }
       .neural {
@@ -95,15 +107,6 @@
   }
 }
 
-
-
-@media only screen and (max-width: 1550px){
-  .scroll-section{
-    > .cards{
-      // padding-left: 50px;
-    }
-  }
-}
 @media only screen and (max-width: 1400px){
   .scroll-section {
     .cards {
@@ -156,3 +159,23 @@
     }
   }
 }
+@media not all and (min-resolution:.001dpcm) // safari browser
+{ @supports (-webkit-appearance:none) {
+
+    .safari_only { 
+      .cards {
+        .borvo {
+          
+          .svg-container {
+            outline: 150vh solid $bgColor;
+            svg {
+              display: inline-block;
+            }
+            .safari-svg {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+}}
